# AutoASR

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  config.rs  main.rs  scanner.rs
