[package]
name = "auto_asr"
version = "0.6.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
directories = "5.0"
anyhow = "1.0"
toml = "0.8"
futures = "0.3"
walkdir = "2"
tokio-util = "0.7"
voice_activity_detector = "0.2"
hound = "3"
